Version 0.5.3 (unreleased)
--------------------------
* Ability to pass a per-field challenge generator function (Fixes #109)
* Added a feature to get captchas from a data pool of pre-created captchas (PR #110, thanks @skozan)

Version 0.5.2
-------------
* Use any mutliplication uperator instead of "*". (Fixes #77 via PR #104, thanks @honsdomi and @isergey)
* Test against Django 1.10

Version 0.5.1
-------------
* Fine tuning MANIFEST.in
* Prevent testproject from installing into site-packages

Version 0.5.0
-------------
* Adds missing includes in MANIFEST.in

Version 0.4.7
-------------
* Supported Django versions are now 1.7, 1.8 and 1.9
* Trying to fix the TravisCI build errors
* Use Django templates to render the individual fields, as well as the assembled Captcha Field (Issue #31)


Version 0.4.6
-------------
* Fixes an UnicodeDecodeError which was apparently only triggered during testing on TravisCI (I hope)
* Support for Django 2.0 urlpatterns syntax (PR #82, Thanks @R3v1L)
* settings.CAPTCHA_FONT_PATH may be a list, in which case a font is picked randomly (Issue #51 fixed in PR #88, Thanks @inflrscns)

Version 0.4.5
-------------
* Test with tox
* Test against Django 1.8 final
* Added ability to force a fixed image size (PR #76, Thanks @superqwer)

Version 0.4.4
-------------
* Added id_prefix argument (fixes issue #37)

Version 0.4.3
-------------
* Add null noise helper (Thanks @xrmx)
* Test against Django 1.7b4
* Added Spanish translations (Thanks @dragosdobrota)
* Massive cleanup (pep8, translations)
* Support for transparent background color. (Thanks @curaloucura)
* Support both Django 1.7 migrations and South migrations.
  Please note, you *must* add the following to your settings, if you are
  using South migrations and Django 1.6 or lower.
* Make sure autocomplete="off" is only applied to the text input, not the hidden input (Issue #68, thanks @narrowfail)
* Fixed some grammar in the documentation. (Thanks @rikrian)